--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     }
   },
   "dependencies": {
-    "jquery": "^2.1.4"
+    "bootstrap-slider": "^5.3.2",
+    "jquery": "^2.1.4",
+    "react": "^0.14.3"
   }
 }
